fix bug #46003 (isset on nonexisting node return unexpected results) add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@266081 c90b9560-bf6c-de11-be94-00142212c4b1